Cleaned up the code and added article popups for bottom section.

--- a/index.html
+++ b/index.html
@@ -79,7 +79,10 @@
               <h2 class="header">New</h2>
               <div class="new-blogs">
                 <div class="new-blog">
-                  <h3 class="new-title article-link" data-article="hydrogen">
+                  <h3
+                    class="new-title article-link"
+                    data-article="voiceCloning"
+                  >
                     Voice Cloning Out of Control: Artists Say Their Identities
                     Are Being Hijacked
                   </h3>
@@ -89,8 +92,11 @@
                   </p>
                 </div>
                 <div class="new-blog">
-                  <h3 class="new-title article-link" data-article="aiArt">
-                    Copyright on the Brink: Why Current Law Can’t Keep Up With
+                  <h3
+                    class="new-title article-link"
+                    data-article="copyrightBrink"
+                  >
+                    Copyright on the Brink: Why Current Law Can't Keep Up With
                     AI Music
                   </h3>
                   <p class="new-content">
@@ -99,7 +105,10 @@
                   </p>
                 </div>
                 <div class="new-blog">
-                  <h3 class="new-title article-link" data-article="vcFunding">
+                  <h3
+                    class="new-title article-link"
+                    data-article="congressPressure"
+                  >
                     Congress Faces Pressure to Regulate AI Music Platforms
                   </h3>
                   <p class="new-content">
@@ -132,7 +141,12 @@
               </figure>
               <div class="top-info">
                 <h2 class="num">01</h2>
-                <h3 class="top-title open-popup-btn">Building AI Music Laws</h3>
+                <h3
+                  class="top-title open-popup-btn article-link"
+                  data-article="buildingLaws"
+                >
+                  Building AI Music Laws
+                </h3>
                 <p class="top-content">
                   U.S. AI rules are voluntary, leaving artists unprotected.
                   Binding laws and real consent systems are needed.
@@ -161,7 +175,12 @@
               </figure>
               <div class="top-info">
                 <h2 class="num">02</h2>
-                <h3 class="top-title open-popup-btn">A System That Can Work</h3>
+                <h3
+                  class="top-title open-popup-btn article-link"
+                  data-article="systemWorks"
+                >
+                  A System That Can Work
+                </h3>
                 <p class="top-content">
                   AI music rules are feasible using current agencies, upgraded
                   systems, and platform moderation.
@@ -190,7 +209,10 @@
               </figure>
               <div class="top-info">
                 <h2 class="num">03</h2>
-                <h3 class="top-title open-popup-btn">
+                <h3
+                  class="top-title open-popup-btn article-link"
+                  data-article="aiMyths"
+                >
                   Addressing AI Music Myths.
                 </h3>
                 <p class="top-content">
