Fixing overflow for smaller screen sizes

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <li>Trending</li>
           <li>Categories</li> -->
         </ul>
-        <img src="./assets/images/icon-menu.svg" class="menu" alt="" />
+        <!-- <img src="./assets/images/icon-menu.svg" class="menu" alt="" /> -->
       </nav>
 
       <main>
@@ -57,7 +57,9 @@
               </picture>
             </figure>
             <div class="blog-info">
-              <h1 class="blog-title">Protect Artists From AI Theft</h1>
+              <h1 class="blog-title">
+                We Need To Protect Artists From AI Theft
+              </h1>
               <div class="blog-read">
                 <p class="blog-content">
                   AI tools can now mimic artists’ voices and styles without
@@ -88,7 +90,7 @@
                   </h3>
                   <p class="new-content">
                     U.S. AI policies favor innovation over enforcement, leaving
-                    artists vulnerable, unlike stricter EU regulations.
+                    artists vulnerable.
                   </p>
                 </div>
                 <div class="new-blog">
@@ -112,8 +114,8 @@
                     Congress Faces Pressure to Regulate AI Music Platforms
                   </h3>
                   <p class="new-content">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Reprehenderit, tenetur?
+                    AI music regulation is feasible using existing agencies,
+                    platform detection, and self-sustaining funding models.
                   </p>
                 </div>
               </div>
@@ -126,7 +128,7 @@
                   src="./assets/images/olena-bohovyk-Ft_Wn-K5YH8-unsplash.jpg"
                   alt="Antique law books on wooden library shelf."
                 />
-                <figcaption class="image-credit">
+                <!-- <figcaption class="image-credit">
                   Photo by
                   <a
                     href="https://unsplash.com/@olenkasergienko?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyTextt"
@@ -137,7 +139,7 @@
                     href="https://unsplash.com/photos/books-on-brown-wooden-shelf-Ft_Wn-K5YH8?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
                     >Unsplash</a
                   >
-                </figcaption>
+                </figcaption> -->
               </figure>
               <div class="top-info">
                 <h2 class="num">01</h2>
@@ -159,7 +161,7 @@
                   src="./assets/images/airalo-36cLNK7lzg4-unsplash.jpg"
                   alt="Hand holding smartphone"
                 />
-                <figcaption class="image-credit">
+                <!-- <figcaption class="image-credit">
                   Photo by
                   <a
                     href="https://unsplash.com/@olenkasergienko?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyTextt"
@@ -171,7 +173,7 @@
                     href="https://unsplash.com/photos/person-holding-smartphone-browsing-travel-app-36cLNK7lzg4?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
                     >Unsplash</a
                   >
-                </figcaption>
+                </figcaption> -->
               </figure>
               <div class="top-info">
                 <h2 class="num">02</h2>
@@ -193,7 +195,7 @@
                   src="./assets/images/junior-ferreira-7esRPTt38nI-unsplash.jpg"
                   alt="Hand holding up lightbulb"
                 />
-                <figcaption class="image-credit">
+                <!-- <figcaption class="image-credit">
                   Photo by
                   <a
                     href="https://unsplash.com/@juniorferreir_?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
@@ -205,7 +207,7 @@
                     href="https://unsplash.com/photos/person-catching-light-bulb-7esRPTt38nI?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
                     >Unsplash</a
                   >
-                </figcaption>
+                </figcaption> -->
               </figure>
               <div class="top-info">
                 <h2 class="num">03</h2>
@@ -234,18 +236,16 @@
           <h1 class="article-title"></h1>
           <h2 class="article-subtitle"></h2>
           <div class="article-byline"></div>
-          <!-- <img class="article-image" /> -->
 
           <figure>
             <img class="article-image" />
             <figcaption class="image-credit article-image-credit"></figcaption>
           </figure>
           <br />
-          <!-- <br /> -->
 
           <div class="article-body"></div>
           <div class="article-footer">
-            <button>Share full article</button>
+            <button>Share full blog post</button>
             <button><i class="fa-solid fa-share"></i></button>
             <button><i class="fa-solid fa-bookmark"></i></button>
           </div>
